added ejs and renamed/moved index.html into views/pages/index.ejs

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="styles/main.css" media="screen">
   </head>
   <body>
+    <main>
+      <h1>Random Quote Machine</h1>
+    </main>
     <script src="javascript/main.js" charset="utf-8"></script>
   </body>
 </html>
