--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>FCC random quote machine</title>
-    <link rel="stylesheet" href="styles/main.css" media="screen">
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
     <main>
