testing new api

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,8 @@
   <body>
     <main>
       <h1>Random Quote Machine</h1>
+
+      <button id="newQuote">Get New Quote!</button>
     </main>
     <script src="javascript/main.js" charset="utf-8"></script>
   </body>
