added template for quotes

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,7 +8,10 @@
   <body>
     <main>
       <h1>Random Quote Machine</h1>
-
+      <blockquote>
+        <p data-js="quote"></p>
+        <span data-js="author"></span>
+      </blockquote>
       <button id="newQuote">Get New Quote!</button>
     </main>
     <script src="javascript/main.js" charset="utf-8"></script>
