--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -4,15 +4,19 @@
     <meta charset="utf-8">
     <title>FCC random quote machine</title>
     <link rel="stylesheet" href="styles/main.css">
+    <script src="https://use.fontawesome.com/d59f8f3207.js"></script>
   </head>
   <body>
-    <main>
-      <h1>Random Quote Machine</h1>
-      <blockquote>
-        <p data-js="quote"></p>
-        <span data-js="author"></span>
+    <main class="main">
+      <h1 class="mainTitle">Random Quote Machine</h1>
+      <blockquote class="random__blockQuote">
+        <i class="fa fa-quote-left fa-x faQuote" aria-hidden="true"></i>
+        <p class="random__quote" data-js="quote"></p>
+        <h2 class="random__quoteAuthor" data-js="author"></h2>
       </blockquote>
-      <button id="newQuote">Get New Quote!</button>
+      <div class="random__buttonWrapper">
+        <button class="random__newQuoteButton" id="newQuote">Get New Quote!</button>
+      </div>
     </main>
     <script src="javascript/main.js" charset="utf-8"></script>
   </body>
