--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -11,12 +11,16 @@ body {
   font-family: sans-serif;
 }
 
-.random__blockQuote {
+.randomQuote__wrapper {
   background-color: rgba(255, 255, 255, 1.0);
   border-radius: 5px;
   margin: auto;
   padding: 20px;
   width: 700px;
+}
+
+.random__blockQuote {
+
 }
 
 .faQuote {
@@ -40,18 +44,37 @@ body {
 .random__buttonWrapper {
   margin: auto;
   margin-top: 15px;
-  width: 100px;
+  width: 150px;
 }
 
 .random__newQuoteButton {
   background-color: rgba(100, 230, 100, 1.0);
   border: none;
   border-radius: 2px;
-  height: 50px;
+  display: inline-block;
+  height: 40px;
   margin: auto;
   outline: none;
 }
 
 .random__newQuoteButton:active {
   background-color: rgba(50, 180, 50, 1.0);
+}
+
+.random__tweetOut {
+  background-color: rgb(0, 132, 180);
+  border: none;
+  border-radius: 2px;
+  display: inline-block;
+  height: 40px;
+  margin: auto;
+  outline: none;
+}
+
+.random__tweetOut:active {
+  background-color: rgb(0, 132, 220);
+}
+
+.tweeter {
+  color: white;
 }
